# streamer_investigation

./: pyproject.toml  setup.py
docs/source/: conf.py  index.rst
docs/source/contents/: 0_streamer.rst  1_proprietary.rst  appendix_mov.rst  appendix_mp4.rst  appendix_vtt.rst  appendix_xml.rst  appendix_z_other_formats.rst
