[tool.poetry]
name = "streamer-investigation"
version = "0.1.0"
description = ""
authors = ["Mark Baggett <mbagget1@utk.edu>"]
readme = "README.md"
packages = [{include = "streamer_investigation"}]

[tool.poetry.dependencies]
python = "^3.11"
Sphinx = "^6.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
